--- a/src/index.css
+++ b/src/index.css
@@ -1003,6 +1003,9 @@ footer {
 
 .menu-list > div > img {
   max-width: 50%;
+  height: 400px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .menu-list > div > div {
@@ -1023,6 +1026,34 @@ footer {
   -webkit-box-direction: reverse;
       -ms-flex-direction: row-reverse;
           flex-direction: row-reverse;
+}
+
+@media only screen and (max-width: 1000px) {
+  .menu-sections {
+    width: 100%;
+  }
+  .menu-list > div {
+    padding: 1%;
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .menu-sections {
+    width: 100%;
+  }
+  .menu-list > div {
+    -webkit-box-orient: vertical !important;
+    -webkit-box-direction: normal !important;
+        -ms-flex-direction: column !important;
+            flex-direction: column !important;
+    padding: 1%;
+    width: 100%;
+  }
+  .menu-list > div > img {
+    width: 90%;
+    max-width: 90%;
+  }
 }
 
 @media screen and (max-width: 800px) {
