--- a/src/styles/_menu.scss
+++ b/src/styles/_menu.scss
@@ -82,6 +82,8 @@
     gap: 25px;
     > img {
       max-width: 50%;
+      height: 400px;
+      object-fit: cover;
     }
     > div {
       font-family: western;
@@ -95,5 +97,33 @@
 .menu-list:nth-child(even) {
   > div {
     flex-direction: row-reverse;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .menu-sections {
+    width: 100%;
+  }
+  .menu-list {
+    > div {
+      padding: 1%;
+      width: 100%;
+    }
+  }
+}
+@media only screen and (max-width: 700px) {
+  .menu-sections {
+    width: 100%;
+  }
+  .menu-list {
+    > div {
+      flex-direction: column !important;
+      padding: 1%;
+      width: 100%;
+      > img {
+        width: 90%;
+        max-width: 90%;
+      }
+    }
   }
 }
